--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline';">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#000000">
   <title>7-Segment Clock</title>
   <style>
     * {
@@ -21,6 +25,15 @@
       font-family: Arial, sans-serif;
       overflow: hidden;
       padding: 0;
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+    }
+
+    body.fullscreen {
+      padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
     }
 
     #clock-container {
@@ -319,6 +332,13 @@
 
     <div class="setting-group">
       <label class="checkbox-label">
+        <input type="checkbox" id="fullscreen" checked>
+        <span>Fullscreen mode</span>
+      </label>
+    </div>
+
+    <div class="setting-group">
+      <label class="checkbox-label">
         <input type="checkbox" id="showColon" checked>
         <span>Blink colon</span>
       </label>
@@ -474,6 +494,46 @@
       document.querySelector('.colon').classList.toggle('blink', e.target.checked);
     });
 
+    // Fullscreen toggle
+    document.getElementById('fullscreen').addEventListener('change', async (e) => {
+      if (e.target.checked) {
+        try {
+          if (document.documentElement.requestFullscreen) {
+            await document.documentElement.requestFullscreen();
+          } else if (document.documentElement.webkitRequestFullscreen) {
+            await document.documentElement.webkitRequestFullscreen();
+          }
+          document.body.classList.add('fullscreen');
+        } catch (err) {
+          console.log('Fullscreen not supported or denied');
+        }
+      } else {
+        try {
+          if (document.exitFullscreen) {
+            await document.exitFullscreen();
+          } else if (document.webkitExitFullscreen) {
+            await document.webkitExitFullscreen();
+          }
+          document.body.classList.remove('fullscreen');
+        } catch (err) {
+          console.log('Exit fullscreen error');
+        }
+      }
+    });
+
+    // Listen for fullscreen changes from user (ESC key, etc)
+    document.addEventListener('fullscreenchange', () => {
+      const isFullscreen = !!document.fullscreenElement;
+      document.getElementById('fullscreen').checked = isFullscreen;
+      document.body.classList.toggle('fullscreen', isFullscreen);
+    });
+
+    document.addEventListener('webkitfullscreenchange', () => {
+      const isFullscreen = !!document.webkitFullscreenElement;
+      document.getElementById('fullscreen').checked = isFullscreen;
+      document.body.classList.toggle('fullscreen', isFullscreen);
+    });
+
     // Wake Lock checkbox
     document.getElementById('wakeLock').addEventListener('change', async (e) => {
       if (e.target.checked) {
@@ -495,6 +555,23 @@
     updateClock();
     setInterval(updateClock, 1000);
     initWakeLock();
+
+    // Auto-enter fullscreen on load (mobile)
+    window.addEventListener('load', async () => {
+      if (window.matchMedia('(display-mode: standalone)').matches || window.navigator.standalone) {
+        // Running as PWA
+        try {
+          if (document.documentElement.requestFullscreen) {
+            await document.documentElement.requestFullscreen();
+          } else if (document.documentElement.webkitRequestFullscreen) {
+            await document.documentElement.webkitRequestFullscreen();
+          }
+          document.body.classList.add('fullscreen');
+        } catch (err) {
+          console.log('Auto fullscreen not available');
+        }
+      }
+    });
   </script>
 </body>
 </html>
